--- a/style.css
+++ b/style.css
@@ -15,16 +15,28 @@ html,body{
 }
 
 #home{
-    overflow: hidden;
     position: relative;
+    z-index: 9999;
+    overflow: hidden;
     width: 100%;
     height: 100vh;
 }
 
-#home img{
+#imagecontainer{
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+}
+
+#imagecontainer img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(2);
+    width: 100%;
 }
 
 #circle{
@@ -35,10 +47,12 @@ html,body{
     width:140vw;
     height:140vw;
     border-radius: 50%;
+    z-index: 99999;
     /* background-color: #fff; */
 }
 
 #circle img{
+    width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -74,12 +88,13 @@ html,body{
     width: 50vw;
     height: 50vw;
     border-radius: 50%;
+    z-index: 9999;
     background-color: #fff;
 }
 
 #overlay{
     position: absolute;
-    z-index: 99999;
+    z-index: 999999;
     width: 100%;
     height: 100vh;
 }
@@ -197,9 +212,16 @@ html,body{
     font-weight: 500;
 }
 
-#second{
-    width: 100%;
-    height: 100vh;
+#overlay #sech1{
+    position: absolute;
+    bottom: -30%;
+    left: 50%;
+    transform: translate(-50%,0) rotate(50deg);
+    font-size: 11vw;
+    font-weight: 500;
+    color: #fff;
+    z-index: 9999999;
+    transform-origin: 0 50%;
 }
 
 #purple{
@@ -211,4 +233,88 @@ html,body{
     width: 8vw;
     height: 8vw;
     background-color: #D5A7B4;
+}
+
+#sidepurple{
+    position: absolute;
+    top: 110%;
+    width: 30%;
+    padding: 90px 30px 40px 30px;
+    background-color: #D5A7B4;
+}
+
+#sidepurple img{
+    width: 100%;
+}
+
+#second{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+#soverlay #nav{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#soverlay{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+#second #nav{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 50px;
+}
+
+#stop{
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    overflow: hidden;
+    border-bottom: 2px solid #dadada;
+}
+
+#sbtm{
+    width: 100%;
+    height: 40vh;
+}
+
+.circle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 50%;
+    width: 18vw;
+    height: 18vw;
+}
+
+#stop .pi{
+    left: 43%;
+    z-index: 999;
+    background: linear-gradient(to right, #D5A7B4, #D5A7B4);
+}
+
+#stop .pu{
+    left: 57%;
+    background-color: #B4AAD5;
+}
+
+#stop h1{
+    font-weight: 300;
+    position: absolute;
+    bottom: 0;
+    z-index: 99999;
+    line-height: 1;
+    color: #fff;
+    left: 110%;
+    font-size: 15vw;
 }
