--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ html,body{
 }
 
 #sbtm{
+    position: relative;
     width: 100%;
     height: 40vh;
 }
@@ -313,8 +314,25 @@ html,body{
     position: absolute;
     bottom: 0;
     z-index: 99999;
-    line-height: 1;
+    line-height: .8;
     color: #fff;
     left: 110%;
-    font-size: 15vw;
+    font-size: 22vw;
+    text-transform: uppercase;
+}
+
+#sbtm h3{
+    text-align: center;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 2.2vw;
+    line-height: 1.6;
+    text-transform: uppercase;
+}
+
+#sbtm h3:nth-child(1){
+    opacity: 1;
 }
