--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+@font-face{
+    font-family: "Neue Haas Grotesk Text Pro";
+    src: url('grotesk.ttf');
+}
+
+@font-face{
+    font-family: "DS-Digital";
+    src: url('digital.ttf');
+}
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: "Neue Haas Grotesk Text Pro";
 }
 
@@ -35,7 +46,9 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%) scale(2);
+    -webkit-transform: translate(-50%,-50%) scale(2);
+        -ms-transform: translate(-50%,-50%) scale(2);
+            transform: translate(-50%,-50%) scale(2);
     width: 100%;
 }
 
@@ -43,7 +56,9 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
     width:140vw;
     height:140vw;
     border-radius: 50%;
@@ -56,35 +71,49 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
 }
 
 #circle #top img{
-    transform: translate(-50%,-50%) rotate(-180deg);
+    -webkit-transform: translate(-50%,-50%) rotate(-180deg);
+        -ms-transform: translate(-50%,-50%) rotate(-180deg);
+            transform: translate(-50%,-50%) rotate(-180deg);
 }
 
 #circle #top img:nth-child(2){
-    transform: translate(-50%,-50%) rotate(-180deg) scale(.7);    
+    -webkit-transform: translate(-50%,-50%) rotate(-180deg) scale(.7);
+        -ms-transform: translate(-50%,-50%) rotate(-180deg) scale(.7);
+            transform: translate(-50%,-50%) rotate(-180deg) scale(.7);    
 }
 
 #circle #top img:nth-child(3){
-    transform: translate(-50%,-50%) rotate(-180deg) scale(.5);    
+    -webkit-transform: translate(-50%,-50%) rotate(-180deg) scale(.5);
+        -ms-transform: translate(-50%,-50%) rotate(-180deg) scale(.5);
+            transform: translate(-50%,-50%) rotate(-180deg) scale(.5);    
 }
 
 
 #circle #btm img:nth-child(2){
-    transform: translate(-50%,-50%) scale(.7);
+    -webkit-transform: translate(-50%,-50%) scale(.7);
+        -ms-transform: translate(-50%,-50%) scale(.7);
+            transform: translate(-50%,-50%) scale(.7);
 }
 
 #circle #btm img:nth-child(3){
-    transform: translate(-50%,-50%) scale(.5);    
+    -webkit-transform: translate(-50%,-50%) scale(.5);
+        -ms-transform: translate(-50%,-50%) scale(.5);
+            transform: translate(-50%,-50%) scale(.5);    
 }
 
 #smcircle{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
     width: 50vw;
     height: 50vw;
     border-radius: 50%;
@@ -101,15 +130,27 @@ html,body{
 
 #nav{
     padding: 30px 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .shadesrow{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 5px;
 }
 
@@ -120,9 +161,15 @@ html,body{
 }
 
 #shades .cubes{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .smcube{
@@ -156,9 +203,15 @@ html,body{
 }
 
 #footer{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     bottom: 0;
     width: 100%;
     position: absolute;
@@ -176,9 +229,16 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 #centerimg span{
@@ -197,17 +257,22 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 #overlay h1{
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%,0);
+    -webkit-transform: translate(-50%,0);
+        -ms-transform: translate(-50%,0);
+            transform: translate(-50%,0);
     font-size: 11vw;
     font-weight: 500;
 }
@@ -216,19 +281,25 @@ html,body{
     position: absolute;
     bottom: -30%;
     left: 50%;
-    transform: translate(-50%,0) rotate(50deg);
+    -webkit-transform: translate(-50%,0) rotate(50deg);
+        -ms-transform: translate(-50%,0) rotate(50deg);
+            transform: translate(-50%,0) rotate(50deg);
     font-size: 11vw;
     font-weight: 500;
     color: #fff;
     z-index: 9999999;
-    transform-origin: 0 50%;
+    -webkit-transform-origin: 0 50%;
+        -ms-transform-origin: 0 50%;
+            transform-origin: 0 50%;
 }
 
 #purple{
     position: absolute;
     top: 120%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
     border-radius: 50%;
     width: 8vw;
     height: 8vw;
@@ -268,9 +339,15 @@ html,body{
 
 #second #nav{
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 30px 50px;
 }
 
@@ -292,7 +369,9 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
     border-radius: 50%;
     width: 18vw;
     height: 18vw;
@@ -301,6 +380,8 @@ html,body{
 #stop .pi{
     left: 43%;
     z-index: 999;
+    background: -webkit-gradient(linear, left top, right top, from(#D5A7B4), to(#D5A7B4));
+    background: -o-linear-gradient(left, #D5A7B4, #D5A7B4);
     background: linear-gradient(to right, #D5A7B4, #D5A7B4);
 }
 
@@ -316,7 +397,9 @@ html,body{
     z-index: 99999;
     line-height: .8;
     color: #fff;
-    left: 110%;
+    -webkit-transform: translateX(110%);
+        -ms-transform: translateX(110%);
+            transform: translateX(110%);
     font-size: 22vw;
     text-transform: uppercase;
 }
@@ -327,7 +410,9 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
     font-size: 2.2vw;
     line-height: 1.6;
     text-transform: uppercase;
@@ -335,4 +420,76 @@ html,body{
 
 #sbtm h3:nth-child(1){
     opacity: 1;
+}
+
+@media(max-width: 500px){
+    #home #nav{
+        padding: 20px;
+    }
+
+    #overlay h1{
+        bottom: 10%;
+        font-weight: 900;
+        font-size: 15vw;
+    }
+
+    #overlay #sech1{
+        font-weight: 900;
+        font-size: 15vw;
+        -webkit-transform: translate(-50%,0) rotate(30deg);
+            -ms-transform: translate(-50%,0) rotate(30deg);
+                transform: translate(-50%,0) rotate(30deg);
+    }
+
+    #sidepurple{
+        width: 85%;
+        padding: 60px 30px 60px 30px;
+    }
+
+    #centerimg span{
+        font-size: 4.5vw;
+        margin-bottom: 2px;
+    }
+
+    #centerimg #imagediv{
+        height: 42vw;
+    }
+
+    #footer{
+        bottom: 2%;
+    }
+
+    #purple{
+        width: 28vw;
+        height: 28vw;
+    }
+
+    #imagecontainer img{
+        width: initial;
+        height: 100%;
+    }
+
+    #smcircle{
+        width: 100vw;
+        height: 100vw;
+    }
+
+    #circle{
+        width: 270vw;
+        height: 270vw;
+    }
+
+    .circle{
+        width: 38vw;
+        height: 38vw;
+    }
+
+    #sbtm h3{
+        width: 90%;
+        font-size: 4.8vw;
+    }
+
+    #stop h1{
+        font-size: 62vw;
+    }
 }
